<resources>
    <string name="app_name">Adopta Huellitas</string>
    <string name="default_web_client_id">779583428799-c79ipfpekm6lvksr07c2pm9pckkqtibq.apps.googleusercontent.com</string>

    <string name="menu_perfil">Perfil</string>
    <string name="menu_huellitas">Huellitas</string>
    <string name="menu_solicitudes">Solicitudes</string>

    <string name="nombre">Nombre</string>
    <string name="especie">Especie</string>
    <string name="descripci_n_de_la_mascota">Descripción de la mascota</string>
    <string name="adoptar">Adoptar</string>
    <string name="imagen_mascota">imagen_mascota</string>

    <string name="btn_register">Registrarse</string>
    <string name="et_R_password">Repetir Contraseña</string>
    <string name="et_password">Ingrese Contraseña</string>
    <string name="et_email">Ingrese Email</string>

    <string name="et_name">Ingrese Nombre Completo</string>
    <string name="txt_login">Iniciar Sesion</string>
    <string name="tv_recovery_account">Recuperar Cuenta</string>
    <string name="btn_enter">Ingresar</string>
    <string name="txt_dont_account">No Tienes Una Cuenta?</string>
    <string name="txt_recoverypass">Olvidaste la contraseña?</string>
    <string name="tv_register">Registrarse</string>

    <string name="nombre_de_la_mascota">Nombre de la Mascota</string>
    <string name="estado_pendiente">Estado: Pendiente</string>
    <string name="fecha_01_01_2024">Fecha: 01/01/2024</string>

    <string name="txt_title">Adopta Huellitas</string>


    <string name="icon">icon</string>
    <string name="titulo">Titulo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continuar_con_email">Continuar con email</string>
    <string name="continuar_con_google">Continuar con google</string>
    <string name="has_olvidado_la_contrase_a">¿Has olvidado la contraseña? <b>Recuperar</b></string>
    <string name="no_tienes_una_cuenta">¿No tienes una cuenta?</string>
    <string name="registro">Registro</string>
    <string name="ya_estas_registrado">¿Ya estas registrado?</string>
    <string name="btn_cerrar_sesion">Cerrar sesion</string>
    <string name="tv_nombre">Nombre Completo:</string>
    <string name="txt_nombre">---</string>
    <string name="tv_email">Email:</string>
    <string name="txt_email">---</string>
    <string name="Txt_titulo_edit">Editar Informacion</string>
    <string name="btn_Actualizar">Actualizar</string>
    <string name="btn_actualizarInformacion">Actualizar</string>
    <string name="Txt_olvide_pass">Recuperar Contraseña</string>
    <string name="Txt_ingrese_email">Ingrese su email para recibir las instrucciones</string>
    <string name="et_Email">Email</string>
    <string name="btn_Enviar">Enviar</string>
    <string name="mascota_foto">foto de la mascota</string>
    <string name="btn_aplicar">Aplicar</string>
    <string name="informaci_n_personal_del_adoptante">Información Personal del Adoptante</string>
    <string name="acepto_que_tengo_mi_perfil_actualizado_con_mis_datos_correctos">Acepto que tengo mi perfil actualizado con mis datos correctos.</string>
    <string name="informaci_n_sobre_el_hogar">Información sobre el Hogar</string>
    <string name="tipo_de_vivienda_casa_departamento_etc">¿Tipo de vivienda? (Casa, departamento, etc.)</string>
    <string name="tienes_patio_o_jard_n_s_no">¿Tienes patio o jardín? (Sí/No)</string>
    <string name="otros_animales_en_casa_s_no">¿Otros animales en casa? (Sí/No)</string>
    <string name="viven_ni_os_en_el_hogar_s_no">¿Viven niños en el hogar? (Sí/No)</string>
    <string name="estilo_de_vida_y_responsabilidad">Estilo de Vida y Responsabilidad</string>
    <string name="pasas_en_casa_diariamente_s_no">¿Pasas en casa diariamente? (Sí/No)</string>
    <string name="has_tenido_mascotas_antes_s_no">¿Has tenido mascotas antes? (Sí/No)</string>
    <string name="declaraci_n_y_compromiso">Declaración y Compromiso</string>
    <string name="acepto_ser_responsable_del_bienestar_de_la_mascota">Acepto ser responsable del bienestar de la mascota.</string>
    <string name="acepto_que_un_refugio_realice_seguimiento_post_adopci_n">Acepto que un refugio realice seguimiento post-adopción.</string>
    <string name="entiendo_que_esta_adopci_n_es_un_compromiso_de_por_vida">Entiendo que esta adopción es un compromiso de por vida.</string>
    <string name="firma_digital_o_nombre_completo">Firma digital o nombre completo</string>
    <string name="enviar_solicitud">Enviar Solicitud</string>
    <string name="btn_beneficios">Beneficios</string>
</resources>