<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".activities.LoginEmailActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/logo" />

    <TextView
        android:text="@string/txt_login"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:startIconDrawable="@drawable/ic_user">

        <EditText
            android:id="@+id/et_email"
            android:hint="@string/et_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_lock">

        <EditText
            android:id="@+id/et_password"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="gone"
        app:indicatorSize="48dp"
        app:trackThickness="4dp"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_enter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:cornerRadius="10dp"
        android:text="@string/btn_enter"
        android:backgroundTint="@color/principal"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:text="@string/has_olvidado_la_contrase_a"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:id="@+id/tv_recovery_account"
        android:text="@string/tv_recovery_account"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/no_tienes_una_cuenta"
        android:layout_marginTop="20dp"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvRegister"
        android:text="@string/tv_register"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.appcompat.widget.LinearLayoutCompat>