<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textMascotaNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_la_mascota"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textEstadoSolicitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estado_pendiente"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

        <TextView
            android:id="@+id/textFechaSolicitud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_01_01_2024"
            android:textSize="14sp"
            android:layout_marginTop="4dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
