<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.FragmentPerfil">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_Perfil"
            android:layout_marginTop="20dp"
            android:scaleType="centerCrop"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_perfil2"
            android:layout_width="120dp"
            android:layout_height="120dp"/>

        <TextView
            android:id="@+id/tv_nombres"
            android:text="@string/tv_nombre"
            android:layout_below="@id/iv_Perfil"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_nombres"
            android:text="@string/txt_nombre"
            android:layout_below="@id/iv_Perfil"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_email"
            android:text="@string/tv_email"
            android:layout_below="@id/txt_nombres"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_email"
            android:text="@string/txt_email"
            android:layout_below="@id/txt_nombres"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_miembro"
            android:text="@string/tv_miembro_desde"
            android:layout_below="@id/txt_email"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txt_miembro"
            android:text="@string/txt_miembro"
            android:layout_below="@id/txt_email"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cerrar_sesion"
            android:text="@string/btn_cerrar_sesion"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:cornerRadius="8dp"
            android:layout_below="@id/txt_miembro"
            android:layout_marginTop="25dp"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/principal"
            android:layout_gravity="center"
            android:layout_width="250dp"
            android:layout_height="wrap_content"/>
        
    </RelativeLayout>



</ScrollView>